--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -17,7 +17,7 @@ GCC_0902_PATCHES	:= $(DIR_DADAO)/DADAO-tch/gcc-0902-patches
 
 GCC_0902_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0902
 GCC_0902_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0902
-GCC_0902_INSTALL	?= $(DIR_DADAO_INSTALL)/gcc-0902
+GCC_0902_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0902
 GCC_0902_LOG_STDOUT	:= $(DIR_DADAO)/_log-stdout-gcc-0902
 GCC_0902_LOG_STDERR	:= $(DIR_DADAO)/_log-stderr-gcc-0902
 
@@ -93,7 +93,7 @@ BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO)/DADAO-tch/binutils-gdb-0233-patches
 
 BINUTILS_GDB_0233_SOURCE		:= $(DIR_DADAO_SOURCE)/binutils-gdb-0233
 BINUTILS_GDB_0233_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0233
-BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_INSTALL)/binutils-gdb-0233
+BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_BUILD)/__binutils-gdb-0233
 BINUTILS_GDB_0233_LOG_STDOUT		:= $(DIR_DADAO)/_log-stdout-binutils-gdb-0233
 BINUTILS_GDB_0233_LOG_STDERR		:= $(DIR_DADAO)/_log-stderr-binutils-gdb-0233
 
