Makefile: typo SIM_0401_INSTALL to QEMU_0401_INSTALL
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-sim/Makefile.DADAO-sim
+++ b/DADAO-sim/Makefile.DADAO-sim
@@ -3,7 +3,7 @@
 #
 sim-highfive:
 	@echo "=== BUILD Simulators BEGIN ==="
-	@SIM_0401_INSTALL=$(DIR_DADAO_INSTALL) make -s qemu-0401-highfive
+	@QEMU_0401_INSTALL=$(DIR_DADAO_INSTALL) make -s qemu-0401-highfive
 	@echo "=== BUILD Simulators DONE! ==="
 
 QEMU_0401_ORIGIN	:= $(DIR_GIT_TAO)/qemu.git
