TCH-bin: complete opcodes process
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -149,11 +149,18 @@ binutils-gdb-0233-new:
 		autoreconf;						\
 		git add .;						\
 		git commit -sm"DADAO-gas: re-generate configure and Makefile.in"
-	@echo "Copy opcodes dir"
+	@echo "OPCODES: Copy opcodes dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/opcodes/* $(BINUTILS_GDB_0233_SOURCE)/opcodes/
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
 		git add opcodes;					\
-		git commit -sm"DADAO: add opcodes related files"
+		git commit -sm"DADAO-opcodes: add dadao support"
+	@echo "OPCODES: Apply opcodes related patches ..."
+	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/4*.patch
+	@echo "OPCODES: re-generate configure and Makefile.in"
+	@cd $(BINUTILS_GDB_0233_SOURCE)/opcodes;			\
+		autoreconf;						\
+		git add .;						\
+		git commit -sm"DADAO-opcodes: re-generate configure and Makefile.in"
 	@echo "Copy ld dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/ld/* $(BINUTILS_GDB_0233_SOURCE)/ld/
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
