TCH-bin: complete include patching process
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -113,11 +113,13 @@ binutils-gdb-0233-new:
 	@git clone $(BINUTILS_GDB_0233_ORIGIN) -- $(BINUTILS_GDB_0233_SOURCE)
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
 		git checkout -b $(BINUTILS_GDB_0233_BRANCH) $(BINUTILS_GDB_0233_VERSION)
-	@echo "HEADERS: Copy include dir"
+	@echo "INCLUDE: Copy include dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/include/* $(BINUTILS_GDB_0233_SOURCE)/include
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
 		git add include;					\
 		git commit -sm"DADAO-include: add header files"
+	@echo "INCLUDE: Apply include related patches ..."
+	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/0*.patch
 	@echo "BFD: Copy bfd dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/bfd/* $(BINUTILS_GDB_0233_SOURCE)/bfd
 	@cd $(BINUTILS_GDB_0233_SOURCE);				\
@@ -173,8 +175,6 @@ binutils-gdb-0233-new:
 		autoreconf;						\
 		git add .;						\
 		git commit -sm"DADAO-opcodes: re-generate configure and Makefile.in"
-	@echo "Apply binutils-gdb-0233-patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/0*.patch
 
 binutils-gdb-0233-conf:
 	@rm -fr $(BINUTILS_GDB_0233_BUILD)
